--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "service-example",
+  "name": "spreadsheet-event-broadcaster",
   "vendor": "vtex",
-  "version": "0.2.0",
-  "title": "Service Example",
-  "description": "Reference app for VTEX IO Services",
+  "version": "0.0.1",
+  "title": "Spreadsheet Event Broadcaster",
+  "description": "This service reads a spreadsheet from a file (.csv, .xls, .xlsx) and broadcasts an event for each row in the sheet.",
   "mustUpdateAt": "2018-01-04",
   "categories": [],
   "dependencies": {},
