--- a/node/package.json
+++ b/node/package.json
@@ -1,13 +1,19 @@
 {
   "dependencies": {
+    "async-busboy": "^1.1.0",
     "co-body": "^6.0.0",
-    "ramda": "^0.25.0"
+    "get-stream": "^6.0.1",
+    "ramda": "^0.25.0",
+    "uuid": "^8.3.2",
+    "xlsx": "^0.17.5"
   },
   "devDependencies": {
+    "@types/async-busboy": "^1.1.1",
     "@types/co-body": "^0.0.3",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.0.0",
     "@types/ramda": "types/npm-ramda#dist",
+    "@types/uuid": "^8.3.4",
     "@vtex/api": "6.45.6",
     "@vtex/test-tools": "^1.0.0",
     "@vtex/tsconfig": "^0.5.6",
