--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
   "dependencies": {},
   "builders": {
     "node": "6.x",
+    "masterdata": "1.x",
     "docs": "0.x"
   },
   "scripts": {
@@ -16,6 +17,16 @@
   },
   "credentialType": "absolute",
   "policies": [
+    {
+      "name": "ADMIN_DS"
+    },
+    {
+      "name": "outbound-access",
+      "attrs": {
+        "host": "api.vtex.com",
+        "path": "/api/dataentities/*"
+      }
+    },
     {
       "name": "colossus-fire-event"
     },
