--- a/node/package.json
+++ b/node/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@vtex/clients": "^2.19.4",
     "async-busboy": "^1.1.0",
     "co-body": "^6.0.0",
     "get-stream": "^6.0.1",
@@ -17,7 +18,8 @@
     "@vtex/api": "6.45.6",
     "@vtex/test-tools": "^1.0.0",
     "@vtex/tsconfig": "^0.5.6",
-    "typescript": "3.9.7"
+    "typescript": "3.9.7",
+    "vtex.spreadsheet-event-broadcaster": "https://dropper--sandboxbrdev.myvtex.com/_v/private/typings/linked/v1/vtex.spreadsheet-event-broadcaster@0.0.1+build1644428151/public/@types/vtex.spreadsheet-event-broadcaster"
   },
   "scripts": {
     "lint": "tsc --noEmit --pretty"
